2007-07-05  George Giolfan  <georgegiolfan@yahoo.com>

	* Selector.cs: Fixed SelectedValueProperty.

2007-07-05  George Giolfan  <georgegiolfan@yahoo.com>

	* Selector.cs: Added.

2007-06-17  George Giolfan  <georgegiolfan@yahoo.com>

	* ButtonBase.cs, Thumb.cs: Removed *Internal properties.

2007-06-16  George Giolfan  <georgegiolfan@yahoo.com>

	* TabPanel.cs: Fixed multiple row layout.

2007-06-16  George Giolfan  <georgegiolfan@yahoo.com>

	* TabPanel.cs: Fixed MeasureOverride.

2007-06-14  George Giolfan  <georgegiolfan@yahoo.com>

	* TabPanel.cs: Switched to Microsoft Panel as it needs to interact with ItemsControl and I don't know how to do that.

2007-06-12  George Giolfan  <georgegiolfan@yahoo.com>

	* TabPanel.cs: Minor improvement of ArrangeOverride.

2007-06-12  George Giolfan  <georgegiolfan@yahoo.com>

	* TabPanel.cs: Fixed ArrangeOverride.

2007-06-12  George Giolfan  <georgegiolfan@yahoo.com>

	* TabPanel.cs: Fixed MeasureOverride.

2007-06-11  George Giolfan  <georgegiolfan@yahoo.com>

	* TabPanel.cs: An attempt at implementing the layout logic.

2007-06-11  George Giolfan  <georgegiolfan@yahoo.com>

	* TabPanel.cs: Added.

2007-05-27  George Giolfan  <georgegiolfan@yahoo.com>

	* RangeBase.cs: Made Minimum and Maximum adjust Value.

2007-05-27  George Giolfan  <georgegiolfan@yahoo.com>

	* RangeBase.cs: Added Value adjusting.

2007-05-27  George Giolfan  <georgegiolfan@yahoo.com>

	* RangeBase.cs: Added validation for infinite values.

2007-05-27  George Giolfan  <georgegiolfan@yahoo.com>

	* RangeBase.cs: Added.

2007-05-27  George Giolfan  <georgegiolfan@yahoo.com>

	* Thumb.cs: Fixed some using statements.

2007-05-27  George Giolfan  <georgegiolfan@yahoo.com>

	* Thumb.cs: Fixed DragDelta raising.

2007-05-27  George Giolfan  <georgegiolfan@yahoo.com>

	* Thumb.cs: Fixed default value of Focusable.

2007-05-27  George Giolfan  <georgegiolfan@yahoo.com>

	* Thumb.cs: Fixed DragDelta raising.
