@@ -1,5 +1,9 @@
 2007-07-05  George Giolfan  <georgegiolfan@yahoo.com>
 
+	* Selector.cs: SelectedIndex now calls OnSelectionChanged.
+
+2007-07-05  George Giolfan  <georgegiolfan@yahoo.com>
+
 	* Selector.cs: Fixed SelectedValueProperty.
 
 2007-07-05  George Giolfan  <georgegiolfan@yahoo.com>
